Update to latest model, add video streaming feature, fixing label box overflow

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,20 +1,42 @@
 .App {
-  height: 100vh;
+  height: 100%;
   padding: 0 10px;
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.App > .content {
-  margin-top: 5px;
-  position: relative;
+.App > * {
+  margin: 3px 0;
+}
+
+.header {
+  text-align: center;
+}
+
+.header p {
+  margin: 5px 0;
+}
+
+.code {
+  padding: 5px;
+  color: greenyellow;
+  background-color: black;
+  border-radius: 5px;
 }
 
 .content > video {
+  display: none;
   width: 100%;
-  max-width: 640px;
+  max-width: 720px;
+  max-height: 500px;
+  border-radius: 10px;
+}
+
+.content {
+  position: relative;
 }
 
 .content > canvas {
@@ -25,7 +47,19 @@
   height: 100%;
 }
 
-h2,
-p {
-  margin-bottom: 5px;
+button {
+  text-decoration: none;
+  color: white;
+  background-color: black;
+  border: 2px solid black;
+  margin: 0 5px;
+  padding: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  color: black;
+  background-color: white;
+  border: 2px solid black;
 }
