Make different colors to every boxes label and add image detection

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -27,6 +27,14 @@
   border-radius: 5px;
 }
 
+.content > img {
+  display: none;
+  width: 100%;
+  max-width: 720px;
+  max-height: 500px;
+  border-radius: 10px;
+}
+
 .content > video {
   display: none;
   width: 100%;
